<resources>
    <string name="app_name">AURA Gallery</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="loading">Loading…</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="reload">Reload</string>
    <string name="scan_bluetooth_devices">Scan Bluetooth Devices</string>
    <string name="go_to_login_page">Login out</string>
    <string name="go_to_profile_page">Upload your photo</string>
    <string name="go_to_calendar">Choose calendar</string>
    <string name="go_to_settings_page">Bluetooth</string>
    <string name="download">Download</string>
    <string name="download_the_uploaded_file">Download the uploaded file</string>
    <string name="upload_photo">Upload photo</string>
    <string name="take_a_photo_to_upload">Take a photo to upload</string>
    <string name="sign_in_anonymously">Sign in anonymously</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_deleting">Deleting…</string>
    <string name="progress_auth">Signing In…</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="success">Success\n</string>
    <string name="camera_button_text">Upload</string>
    <string name="button_choose">Choose this</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload your Photo</string>
    <string name="choose_photo">Choose your Photo</string>
    <string name="choose_photo_hengshu">Choose Photo v h</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Choose your picture</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="menu_options">choose mode\n</string>
    <string name="title_name">Bluetooth Connect</string>
    <string name="wifi_title_name">Wi-Fi Connect</string>
    <string name="settings_options">Setting</string>
    <string name="add_device">Add Devices</string>
    <string name="page_switch">"Page switched to other page "</string>
    <string name="choose_no_file">No file selected</string>
    <string name="my_notice">Notice</string>
    <string name="input_data">Please enter the data to send</string>
    <string name="length_error">Length error, length must be an even number</string>
    <string name="max_244">Can only send up to 244 bytes</string>
    <string name="formate_error">Format error, only 0-9, a-f, A-F allowed</string>
    <string name="ble_disconect">Bluetooth disconnected</string>
    <string name="my_email">Email</string>
    <string name="my_passwd">Password</string>
    <string name="my_login">Login</string>
    <string name="my_register">Register</string>
    <string name="device_manage">Device List</string>
    <string name="data_mode">Calendar mode</string>
    <string name="image_mode">Image mode</string>
    <string name="diy_mode">Custom image</string>
    <string name="set_wifi">Set WiFi</string>
    <string name="update_image">Update image</string>
    <string name="update_bin">Firmware update</string>
    <string name="user_manage">User Profile</string>
    <string name="connected_to">"Connected to "</string>
    <string name="all_fail_check_uuid">All connection attempts failed, please check device and UUID configuration.</string>
    <string name="Mode_auto">Mode: Auto</string>
    <string name="bat_100">Battery: 100</string>
    <string name="wifi_passwd">WiFi password</string>
    <string name="wifi_ssid">WiFi Name (SSID)</string>
    <string name="my_action">Action</string>
    <string name="my_statue">Status</string>
    <string name="my_mode">"Mode: "</string>
    <string name="wifi_ok">WiFi connection successful</string>
    <string name="wifi_NG">WiFi connection failed</string>
    <string name="ota_no_need">Already on the latest firmware</string>
    <string name="checking_wait_2mins">Checking, please wait 2 minutes</string>
    <string name="ota_ok_reset">Upgrade complete, device rebooting</string>
    <string name="ota_fail_retry">Upgrade failed, please try again</string>
    <string name="updateing_image">Starting image update</string>
    <string name="connect_ble_first">Please connect to a device first</string>
    <string name="input_wifi">Enter WiFi information manually</string>
    <string name="my_input">Submit</string>
    <string name="input_wifi_ssid">Please enter WiFi name</string>
    <string name="input_wifi_passwd">Please enter WiFi password</string>
    <string name="my_undo">Cancel</string>
    <string name="send_config_fail">Sending configuration failed:</string>
    <string name="device_ota">Firmware update</string>
    <string name="id_add_to_user">Device ID added to user profile</string>
    <string name="update_user_fail">Failed to update user profile</string>
    <string name="device_id_exit">Device ID already exists</string>
    <string name="show_direction">Show direction</string>
    <string name="register_fail">Registration failed</string>
    <string name="change_and_disconnected">Switched out, Bluetooth disconnected</string>
    <string name="ble_errcode">Bluetooth connection failed, errCode=</string>
    <string name="no_logoin">Not logged in</string>
    <string name="my_hi">Hi,</string>
    <string name="my_logout">Logout</string>
    <string name="data_receive">Data received:</string>
    <string name="my_scrow">Scroll</string>
    <string name="my_clean">Clear</string>
    <string name="data_send">Data sent:</string>
    <string name="my_send">Send</string>
    <string name="need_location_pre">Please enable the app’s location permission</string>
    <string name="need_ble_pre">Please enable the app’s Bluetooth permission to allow the app to connect to nearby devices</string>
    <string name="my_connect">" Connected"</string>
    <string name="my_disconnect">" Disconnected"</string>
    <string name="url_add_to_user">File URL added to user profile</string>
    <string name="update_user_profile_fail">Failed to update user profile</string>
    <string name="file_upload_ok">File uploaded successfully</string>
    <string name="file_update_fail">File upload failed</string>
    <string name="file_delete_from_user">File removed from user profile</string>
    <string name="url_no_exit">File URL does not exist</string>
    <string name="file_delete_fail">File deletion failed</string>
    <string name="file_delete_ok">File deleted successfully</string>
    <string name="get_user_date_fail">Failed to get user data</string>
    <string name="my_update_ok">Update successful</string>
    <string name="my_connect_wifi">Connect WiFi</string>
    <string name="my_connecting">Connecting...</string>
    <string name="device_name_wrong">"Device name does not meet expectations: "</string>
    <string name="ble_connect_fail">"BLE connection failed: "</string>
    <string name="device_add_list">Device added to device list</string>
    <string name="add_device_fail">Failed to add device</string>
    <string name="check_fail">Query failed</string>
    <string name="cut_fail">Cropping failed</string>
    <string name="login_ok_welcon">"Login successful, welcome "</string>
    <string name="login_fail">"Login failed: "</string>
    <string name="login_and_register_ok">Registration and login successful</string>
</resources>